apple pie recipe

--- a/Block1_Frontend/Css_introduction/styles.css
+++ b/Block1_Frontend/Css_introduction/styles.css
@@ -15,8 +15,8 @@
 }
 h1{
     color: rgb(250, 248, 246);
-    padding-left: 600px;
-    padding-top: 400px;
+    padding-left: 35%;
+    padding-top: 350px;
     font-size: 5em;
     font-family:'Courier New', Courier, monospace;
 
